HW03: Finish problem 3.

--- a/hw03/hw03.tex
+++ b/hw03/hw03.tex
@@ -152,6 +152,55 @@
       allowed to transform the problem into an equivalent one from which the
       dual can be more easily derived.
     \end{question}
+
+    I will use the second intermediate drawing of the MCNF problem I gave in
+    problem 1.  This is the drawing where there are costs and upper bounds, but
+    no lower bounds or capacities.  This is not exactly the same case as we did
+    in class.  In class, we assumed that there were finite upper bounds for each
+    arc.  In the case where there is no upper bound, there is simply no
+    constraint $-x_{ij} \ge -u_{ij}$ in the primal, and so there is no
+    corresponding $\alpha_{ij}$ variable in the dual.  Of course, there are the
+    same number of constraints in the dual, just some are missing $\alpha_{ij}$
+    variables.  The dual for this problem is given below.  I have included all 0
+    coefficients in the objective function for completeness.  Also, I have
+    relabeled nodes $a_i, a_o, \dots, e_i, e_o$ to $0, 1, \dots, 8, 9$ for ease
+    of translation.
+
+    \begin{alignat*}{1}
+      \max 0\pi_0 + 15\pi_1 + 5\pi_2 + 5\pi_3 + 0\pi_4 - 20\pi_5 + 5\pi_6 -
+      10\pi7 + 0\pi_8 + 0\pi_9 & \\
+      -25\alpha_{01} - 35\alpha_{23} - 25\alpha_{34} - 30\alpha_{45} -
+      10\alpha_{38} - 10\alpha_{56} - 20\alpha_{89} - 10\alpha_{67} &\text{
+        s.t.} \\
+      \pi_0 - \pi_1 - \alpha_{01} &\le 0 \\
+      \pi_1 - \pi_2 &\le 4 \\
+      \pi_2 - \pi_3 - \alpha_{23} &\le 0 \\
+      \pi_0 - \pi_4 &\le 6 \\
+      \pi_3 - \pi_4 - \alpha_{34} &\le -2 \\
+      \pi_3 - \pi_8 - \alpha_{38} &\le 5 \\
+      \pi_4 - \pi_5 - \alpha_{45} &\le 0 \\
+      \pi_8 - \pi_9 - \alpha_{89} &\le 0 \\
+      \pi_5 - \pi_6 - \alpha_{56} &\le -3 \\
+      \pi_9 - \pi_6 &\le 2 \\
+      \pi_6 - \pi_7 - \alpha_{67} &\le 0 \\
+    \end{alignat*}
+
+    The complementary slackness conditions:
+
+    \begin{align*}
+      \alpha_{01} (u_{01} - x_{01}) &= 0 &x_{01} (\pi_0 - \pi_1 - \alpha_{01}) &= 0 \\
+                                    &    &x_{12} (\pi_1 - \pi_2 - 4) &= 0 \\          
+      \alpha_{23} (u_{23} - x_{23}) &= 0 &x_{23} (\pi_2 - \pi_3 - \alpha_{23}) &= 0 \\
+                                    &    &x_{04} (\pi_0 - \pi_4 - 6) &= 0 \\          
+      \alpha_{34} (u_{34} - x_{34}) &= 0 &x_{34} (\pi_3 - \pi_4 - \alpha_{34} + 2) &= 0 \\
+      \alpha_{38} (u_{38} - x_{38}) &= 0 &x_{38} (\pi_3 - \pi_8 - \alpha_{38} - 5) &= 0 \\
+      \alpha_{45} (u_{45} - x_{45}) &= 0 &x_{45} (\pi_4 - \pi_5 - \alpha_{45}) &= 0 \\
+      \alpha_{89} (u_{89} - x_{89}) &= 0 &x_{89} (\pi_8 - \pi_9 - \alpha_{89}) &= 0 \\
+      \alpha_{56} (u_{56} - x_{56}) &= 0 &x_{56} (\pi_5 - \pi_6 - \alpha_{56} + 3) &= 0 \\
+                                    &    &x_{96} (\pi_9 - \pi_6 - 2) &= 0 \\          
+      \alpha_{67} (u_{67} - x_{67}) &= 0 &x_{67} (\pi_6 - \pi_7 - \alpha_{67}) &= 0 \\
+    \end{align*}
+    
   \end{problem}
 
   \begin{problem}{4}
