HW04: Add header info...

--- a/hw04/hw04.tex
+++ b/hw04/hw04.tex
@@ -1,9 +1,9 @@
 \documentclass[fleqn]{homework}
 
 \student{Stephen Brennan (smb196)}
-\course{}
-\assignment{}
-\duedate{}
+\course{EECS 477}
+\assignment{Homework 4}
+\duedate{October 30, 2015}
 
 %\usepackage{mathtools}
 \usepackage{graphicx}
