HW05: Do problem 1.

--- a/hw05/hw05.tex
+++ b/hw05/hw05.tex
@@ -20,6 +20,12 @@
 
       \includegraphics[width=0.6\textwidth]{p1.png}
     \end{question}
+
+    My solution is handwritten and included as images in the provided archive.
+    My final flow was not optimal (although it was feasible), leading me to
+    believe that I made an error in executing the algorithm.  The error most
+    likely occurred when I did arc reversals for edges that had infinite upper
+    bounds, since I did not know how to handle them.
   \end{problem}
 
   \begin{problem}{2}
